score almost complete

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,12 @@
     </div>
     {% endfor %}
 </div>
-
 <form id="boggle-form">
     <input id="boggle-guess" type="text" name="boggle-guess" placeholder="Guess Word">
     <button>Submit Guess</button>
 </form>
+
+<div id="boggle-score">
+    
+</div>
 {% endblock %}
