--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,10 @@
 </head>
 <body>
   {% block content %}
-    
   {% endblock %}
+
+  <p>Current Score: <b id="current-score">0</b> </p>
+  <p>High Score: <b id="high-score">{{highscore}}</b> </p>
   
   <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.js"></script>
