--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
 
   <p>Current Score: <b id="current-score">0</b> </p>
   <p>High Score: <b id="high-score">{{highscore}}</b> </p>
+  <p>Number of Games Played: <b id="games-played">{{games_played}}</b></p>
   
   <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
   <script src="https://unpkg.com/axios/dist/axios.js"></script>
