--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 </div>
 <form id="boggle-form">
     <input id="boggle-guess" type="text" name="boggle-guess" placeholder="Guess Word">
-    <button>Submit Guess</button>
+    <button id="sub-btn">Submit Guess</button>
 </form>
 
 <div id="boggle-score">
